<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.sorting.SortingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorting"
        style="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:id="@+id/rgrSorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_alphabetically"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtAlphabeticallyAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_ascending" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtAlphabeticallyDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_descending" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_by_value"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtByValueAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_ascending" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtByValueDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_descending" />
    </RadioGroup>
</LinearLayout>